# marimo_notebooks

./: .gitignore  LICENSE  README.md  pyproject.toml
general_biology/: openfold3_predict.py  protein_conservation.py  protein_conservation_v2.py  protenix_predict.py
widget/: af3_helpers.py  af3_prediction_viewer.py  msa_helpers.py  protein_msa_viewer.py  protein_structure_viewer.py  pyproject.toml  structure_helpers.py
